Prepare random grid generation